Fixing image scaling and library card spacing

--- a/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
+++ b/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
@@ -2,5 +2,5 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, 160px);
     grid-gap: 0.5rem;
-    justify-content: space-between;
+    justify-content: space-around;
 }
